refactor: optimize class loader in DAOFinder util